spacing and color fix

--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ body.green{
 	width: 650px;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: rgb(9, 84, 12);
+	background-color: #D2DE32;
 	border-radius: 2px;
 }	
 
